extending cluster management